# localstack_serverless_demo

./: README.md  pyproject.toml  requirements.txt
deployment/: build-lambdas.sh
deployment/awslocal/: deploy.sh
